# CV

./: .gitignore  pyproject.toml  requirements.txt
Data/: Bolt_protrusion_Stack-up_20251202.pptx
Data/docs/: design.md  requirements.md  tasks.md
results/: README.md
results/full_extraction/: extraction_results_gemini.csv  extraction_results_gemini.json  footstep_bearing_dimensions.csv  footstep_bearing_relationships.csv
results/stackup/: footstep_bearing_dimensions.csv  footstep_bearing_relationships.csv  stackup_relevant_dimensions.csv  stackup_relevant_dimensions.json
scripts/: extract_dimensions_fast.py
src/: config.py  gui_app.py
src/api/: adapters.py  base.py  cache.py  models.py  queue.py  retry.py  router.py
src/dimension_extractor/: __init__.py  config.py  extractor.py  json_handler.py  logger.py  models.py  pdf_converter.py  report_generator.py  scoring.py  validation.py
tests/: test_api.py  test_config.py  test_cross_dev_pipeline.py  test_developer3_core.py  test_json_handler.py  test_logger.py  test_pdf_converter.py  test_report_generator.py
